src/test/ui/feature-gate-doc_masked.stderr
error[E0658]: #[doc(masked)] is experimental (see issue #44027)
  --> $DIR/feature-gate-doc_masked.rs:11:1
   |
11 | #[doc(masked)] //~ ERROR: #[doc(masked)] is experimental
   | ^^^^^^^^^^^^^^
   |
   = help: add #![feature(doc_masked)] to the crate attributes to enable

error: aborting due to previous error

